[build-system]
requires = [
    "sklearn>=0.23.2",
    "numpy>=1.19.5",
    "pandas>=1.3.3",
    "setuptools>=42",
    "wheel",
    "tqdm",
    "itertools",
    "scipy>=1.7.3",
    "seaborn>=0.11.2",
    "matplotlib>=3.4.3",
    "bokeh>=2.4.0",
    "plotly>=4.12.0",
    "plotly>=4.12.0",

]
build-backend = "setuptools.build_meta"