[metadata]
name = mllibs
version = 0.0.1
author = Andrey Shtrauss
author_email = shtraussart@gmail.com
description = Custom Machine Learning Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shtrausslearning/mllibs
project_urls =
    Bug Tracker = https://github.com/shtrausslearning/mllibs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src